<resources>
    <string name="app_name">To do List</string>


    <!-- Screen add task -->
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="data">Data</string>
    <string name="hour">Hora</string>


    <string name="button_add_task">Criar Tarefa</string>
    <string name="cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_new_task">Nova tarefa</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui nenhuma tarefa</string>
</resources>